fix: update intro text and adjust CSS gap for list container
- Changed "DevMDX!" to "DevMDX demo!" in the introduction.
- Enhanced the introductory text with additional links to GitHub, X, projects, and articles.
- Modified the CSS for the list container to adjust the gap for medium screens.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -193,7 +193,7 @@
 
 	/* Container Styles */
 	.list-container {
-		@apply grid gap-5;
+		@apply grid gap-5 md:gap-4;
 	}
 
 	/* Text Styles */
